# strawberry-id

./: .gitignore  Cargo.toml  README.md  config.yml.example
data/: data.db.example  services.json
src/: global.rs  main.rs  utilities.rs
src/core/: config.rs  consts.rs  db.rs  locale.rs  mod.rs  object.rs  params.rs  state.rs  system_core.rs  totp.rs  uuid.rs
src/layouts/: 404.html.tera  account.html.tera  index.html.tera  login.html.tera  login_oauth.html.tera  oauth_dialog.html.tera  oauth_dialog_success.html.tera
src/layouts/base/: base.html.tera  base_login.html.tera  footer.html.tera  nav.html.tera  nav_min.html.tera
src/layouts/oauth/: dialog.html.tera  login.html.tera  success.html.tera
src/locales/: de_DE.yml  en_US.yml
src/routes/: mod.rs  root.rs  status_code.rs  web_static.rs
src/routes/v1/: index.rs
src/routes/v2/: account.rs  index.rs  login.rs  login_oauth.rs  logout.rs  oauth_dialog.rs  register.rs  totp.rs
src/routes/v2/api/: auth.rs  callback.rs  request.rs
src/routes/v2/api/oauth/: callback.rs
src/static/css/: 404.css  buttons.css  dialog_oauth.css  footer.css  index.css  login.css  style.css
src/static/js/: login.js
src/static/stylesheet/: account.css  footer.css  index.css  login.css  oauth.css
static/stylesheet/: 404.css  account.css  base.css  footer.css  index.css  login.css  oauth.css
